# hive-claw

./: .gitignore  CLAUDE.md  Cargo.toml  GPUI_STATUS.md  PROJECT_SUMMARY.md  README.md  TUI_DEMO.md  config.example.toml  config.template.toml  start.sh
.github/workflows/: ci.yml
.monkeycode/specs/offline-analysis-agent/: design.md  requirements.md  tasks.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json  trae.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.trae/skills/speckit-plan/: SKILL.md
crates/hiveclaw/: Cargo.toml
crates/hiveclaw/src/: config.rs  lib.rs  logging.rs  main.rs  version.rs
crates/hiveclaw/src/http/: mod.rs  responses.rs
crates/hiveclaw/src/openresponses/: limits.rs  mod.rs  stub.rs
crates/hiveclaw/tests/: contract_responses_attachments_streaming.rs  contract_responses_attachments_sync.rs  contract_responses_attachments_validation.rs  contract_responses_streaming.rs  contract_responses_sync.rs  contract_responses_validation.rs  version_smoke.rs
crates/hivegui/: Cargo.toml
crates/hivegui/src/: config.rs  lib.rs  logging.rs  main.rs  version.rs
crates/hivegui/src/client/: mod.rs  streaming.rs  sync.rs
crates/hivegui/src/model/: conversation.rs  mod.rs  tools.rs
crates/hivegui/src/ui/: app.rs  conversation.rs  home.rs  input.rs  mod.rs  strings_zh.rs  tools_section.rs
crates/hivegui/tests/: client_attachments_against_mock.rs  client_streaming_against_mock.rs  client_sync_against_mock.rs  client_unreachable_surfaces_failure.rs  conversation_sequential_send.rs  conversation_with_attachments.rs  state_persists_across_navigation.rs  tool_series_empty_state.rs  tool_series_hour_plus_one.rs  version_smoke.rs
specs/001-hiveclaw-hivegui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hiveclaw-hivegui/checklists/: comprehensive.md  requirements.md
specs/001-hiveclaw-hivegui/contracts/: openresponses-v1.md
src/: main.rs
src/config/: mod.rs
src/gui/: app.rs  mod.rs
src/gui/components/: button.rs  editor.rs  input.rs  mod.rs  modal.rs  progress.rs  skeleton.rs  table.rs  toast.rs  tree.rs
src/gui/styles/: colors.rs  mod.rs  theme.rs  typography.rs
src/gui/views/: dag_view.rs  data_preview.rs  history.rs  logs.rs  metadata.rs  metadata_browser.rs  mod.rs  quality_dashboard.rs  settings.rs  sql_editor.rs  task_list.rs  wizard.rs
src/models/: metadata.rs  mod.rs  quality.rs  task.rs
src/services/: ai.rs  azkaban.rs  generator.rs  git.rs  metadata.rs  mod.rs  quality.rs
