[workspace]
resolver = "2"
members = [
    "crates/hiveclaw",
    "crates/hivegui",
]
# `default-members` keeps `cargo build` / `cargo test` (no args) scoped to
# HiveClaw, so the service side stays iterable on machines without the
# system libraries gpui needs (libxkbcommon, libwayland, libvulkan).
# Explicit `cargo build -p hivegui` or `cargo build --workspace` still
# builds the desktop crate.
default-members = ["crates/hiveclaw"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/taoistwar/hive-claw"

[workspace.dependencies]
# HTTP / async (HiveClaw)
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }

# HTTP client (HiveGUI)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
eventsource-stream = "0.2"

# Desktop UI (HiveGUI). Pulled from Zed's main branch — gpui is not on crates.io.
# `gpui_platform` provides the `application()` constructor that picks the right
# platform backend (macOS / Linux / web) without #[cfg] gating at the callsite.
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", branch = "main" }

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
directories = "5"
futures = "0.3"
url = "2"
bytes = "1"

# Dev-only
assert_cmd = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
