[package]
name = "offline-analysis-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "sqlite"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Git
git2 = "0.18"

# UUID
uuid = { version = "1", features = ["v4"] }

# Future Utilities
futures = "0.3"
async-trait = "0.1"

# TUI for now (gpui will be added later)
ratatui = "0.24"
crossterm = "0.27"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
