[package]
name = "offline-analysis-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "sqlite"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Git
git2 = "0.18"

# UUID
uuid = { version = "1", features = ["v4"] }

# Future Utilities
futures = "0.3"
async-trait = "0.1"

# GPUI - 桌面 GUI (实验性，需要图形环境)
# 启用方法:
# 1. 取消下面一行的注释
# 2. 注释掉 ratatui 和 crossterm
# 3. 安装系统依赖：libwayland-dev libxkbcommon-dev libgtk-3-dev libclang-dev
# gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main" }

# TUI - 当前默认 GUI 方案 (跨平台，无需图形环境)
ratatui = "0.24"
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1
